--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -11,3 +11,12 @@ pre-push:
   jobs:
     - name: "Run tests"
       run: cargo test --all --all-features
+
+pre-commit:
+  parallel: true
+  jobs:
+    - name: "Run clippy"
+      run: cargo clippy --all --all-features
+
+    - name: "Run fmt"
+      run: cargo fmt --all
