pipe(githooks): add rustfmt and clippy formatting

--- a/.config/tasks.md.toml
+++ b/.config/tasks.md.toml
@@ -9,3 +9,9 @@ description = "Lint markdown files"
 usage = 'arg "<file>" var=#true default="**/*.md"'
 quiet = true
 run = 'markdownlint-cli2 --config {{vars.config_dir}}/.markdownlint-cli2.jsonc {{arg(name="file")}}'
+
+["fix:markdown"]
+description = "Fix markdown files"
+usage = 'arg "<file>" var=#true default="**/*.md"'
+quiet = true
+run = 'mise run fmt:markdown {{arg(name="file")}}'
