build(linters): borrow linter configuration from HibiscusCollective/gitfairy

--- a/.config/tasks.md.toml
+++ b/.config/tasks.md.toml
@@ -1,17 +1,17 @@
-["fmt:markdown"]
+["fmt:markdownlint"]
 description = "Format markdown files"
 usage = 'arg "<file>" var=#true default="**/*.md"'
 quiet = true
-run = 'mise run lint:markdown {{arg(name="file")}} --fix'
+run = 'mise run lint:markdownlint {{arg(name="file")}} --fix'
 
-["lint:markdown"]
+["lint:markdownlint"]
 description = "Lint markdown files"
 usage = 'arg "<file>" var=#true default="**/*.md"'
 quiet = true
 run = 'markdownlint-cli2 --config {{vars.config_dir}}/.markdownlint-cli2.jsonc {{arg(name="file")}}'
 
-["fix:markdown"]
+["fix:markdownlint"]
 description = "Fix markdown files"
 usage = 'arg "<file>" var=#true default="**/*.md"'
 quiet = true
-run = 'mise run fmt:markdown {{arg(name="file")}}'
+run = 'mise run fmt:markdownlint {{arg(name="file")}} --fix'
