--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -1,21 +1,24 @@
 assert_lefthook_installed: true
 
 post-merge:
-  piped: true
-  commands:
-    "mise install":
-      run: mise install -y
-
-pre-push:
-  parallel: true
-  jobs:
-    - name: "Run tests"
-      run: cargo test --all --all-features
+    piped: true
+    jobs:
+        - name: Mise update
+          id: mise-update
+          run: mise install
+          interactive: true
 
 pre-commit:
-  piped: true
-  jobs:
-    - name: "Run formatters"
-      run: mise run fmt
-    - name: "Run linters"
-      run: mise run lint
+    piped: true
+    jobs:
+        - name: 'Run formatters'
+          run: mise run fmt
+          stage_fixed: true
+        - name: 'Run linters'
+          run: mise run lint
+
+commit-msg:
+    piped: true
+    jobs:
+      - name: 'Run commit linter'
+        run: bun run commitlint --edit {1}
