--- a/mise.toml
+++ b/mise.toml
@@ -1,12 +1,21 @@
 [tools]
+bun = "1.2.4"
 lefthook = "1.11.2"
 markdownlint-cli2 = "0.17.2"
+"npm:cspell" = "8.17.5"
+
+[task_config]
+includes = [
+    ".config/tasks.md.toml",
+    ".config/tasks.rs.toml",
+    ".config/tasks.ts.toml",
+]
 
 [vars]
 config_dir = "{{config_root}}/.config"
 
-[task_config]
-includes = [".config/tasks.md.toml", ".config/tasks.rs.toml"]
+[env]
+CLIPPY_CONF_DIR = "{{vars.config_dir}}"
 
 [tasks.fmt]
 description = "Run all formatting tasks"
@@ -17,5 +26,13 @@ description = "Run all linting tasks"
 depends = ["lint:*"]
 
 [tasks.fix]
-description = "Run all fixing tasks"
+description = "Fix all linting problems"
 depends = ["fix:*"]
+
+[tasks."lint:spellcheck"]
+description = "Run spell check"
+run = "cspell --config {{vars.config_dir}}/.cspell.json ."
+
+[tasks."spellcheck:words"]
+description = "List unknown words in spell checker"
+run = "cspell --config {{vars.config_dir}}/.cspell.json --words-only --unique ."
