--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,12 @@
 [toolchain]
-channel = "1.85.0"
-components = ["rust-analyzer"]
+channel = "1.85"
 profile = "default"
+components = ["rust-analyzer"]
+targets = [
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin",
+    "x86_64-unknown-linux-gnu",
+    "i686-unknown-linux-gnu",
+    "x86_64-pc-windows-msvc",
+    "i686-pc-windows-msvc",
+]
